TranscoderLive sample application
+ Sample Red5 application for transcoder demo

--- a/transcoderlive/WebContent/WEB-INF/red5-web.properties
+++ b/transcoderlive/WebContent/WEB-INF/red5-web.properties
@@ -1,2 +1,11 @@
-webapp.contextPath=/transcoderlive
+webapp.contextPath=/transcoderLive
 webapp.virtualHosts=localhost, 127.0.0.1, 192.168.1.2
+
+# webapp.homeDirectory=
+webapp.ffmpegPath=C:\\ffmpeg\\bin\\ffmpeg.exe
+#  templateDirectory should be located at server home
+webapp.templateDirectory=transcoder/templates 
+# file name of the template to be used
+webapp.transcoderTemplate=hls-template.xml
+# working directory can be located anywhere. This can be overridden with TranscodeRequest object 
+webapp.workingDirectory=webapps
