--- a/transcoderlive/.classpath
+++ b/transcoderlive/.classpath
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre8">
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipsewtp.jst.server.generic.red5.runtimeClasspathProvider/Red5 Server Runtime 2">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/red5-1.0.2/lib/ffmpeg-transcoder.jar"/>
+	<classpathentry kind="lib" path="C:/red5-server-1.0.5/lib/red5-server-common-1.0.5-RELEASE.jar"/>
+	<classpathentry kind="lib" path="C:/red5-server-1.0.5/red5-server.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ffmpeg-transcoder"/>
+	<classpathentry kind="lib" path="C:/red5-server-1.0.5/lib/spring-core-4.0.8.RELEASE.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
