--- a/transcoderlive/WebContent/WEB-INF/web.xml
+++ b/transcoderlive/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	is intended to be displayed by tools. The display 
 	name need not be unique.
 	-->
-	<display-name>transcoderlive</display-name>
+	<display-name>transcoderLive</display-name>
 	
 	<!--
 	The context-param element contains the declaration of a web
@@ -18,7 +18,7 @@
 	-->	
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>/transcoderlive</param-value>
+		<param-value>/transcoderLive</param-value>
 	</context-param>
 	
 	<listener>
