red5-web.properties update
+ comments update

--- a/transcoderLive/WebContent/WEB-INF/red5-web.properties
+++ b/transcoderLive/WebContent/WEB-INF/red5-web.properties
@@ -1,9 +1,9 @@
 webapp.contextPath=/transcoderLive
 webapp.virtualHosts=localhost, 127.0.0.1, 192.168.1.2
 
-# webapp.homeDirectory=
+# Path to ffmpeg executable
 webapp.ffmpegPath=C:\\ffmpeg\\bin\\ffmpeg.exe
-#  templateDirectory should be located at server home
+#  Transcoder directory should be located at server home ie: red5/
 webapp.templateDirectory=transcoder/templates
 # file name of the template to be used
 webapp.transcoderTemplate=multibitrate-rtmp-template.xml
