--- a/bodyshow/pom.xml
+++ b/bodyshow/pom.xml
@@ -163,6 +163,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
+		</dependency>    
         <dependency>
             <groupId>org.red5</groupId>
             <artifactId>red5-server</artifactId>
