--- a/bodyshow/pom.xml
+++ b/bodyshow/pom.xml
@@ -164,9 +164,9 @@
     </dependencyManagement>
     <dependencies>
 		<dependency>
-		    <groupId>commons-lang</groupId>
-		    <artifactId>commons-lang</artifactId>
-		    <version>2.6</version>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.5</version>
 		</dependency>    
         <dependency>
             <groupId>org.red5</groupId>
